--- a/_posts/2023-10-09-PP_Log2.md
+++ b/_posts/2023-10-09-PP_Log2.md
@@ -2,12 +2,13 @@
 toc: false
 comments: true
 layout: post
-title: Week 8 Log
+title: PP Week 2 Log
 description: Work on passion project - Terminal Souls
-type: hacks
-courses: { compsci: {week: 8} }
+type: plans
+courses: { compsci: {week: 2} }
 ---
 
+## Code, Code, Code Week 2 (10/9 - 10/13)
 Monday:
 - Team meet
     - Discuss what we have so far
@@ -16,6 +17,7 @@ Monday:
 - Continue working on project
 Tuesday:
 - In class: not much --> student lessons
-Wednesday:
-Thursday:
-Friday:
+Wednesday: 
+Thursday: 
+- In class: not much --> student lessons
+Friday: 
