--- a/_posts/2023-10-13-turnTest2.md
+++ b/_posts/2023-10-13-turnTest2.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: posts
-title: Turn Test (actions?)
+title: Turn Test
 description: Figuring out user actions and how to format them
 courses: { compsci: {week: 1} }
 type: hacks
