--- a/_notebooks/2023-10-02-bossFight.ipynb
+++ b/_notebooks/2023-10-02-bossFight.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "toc: true\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: Boss Fight (original)\n",
+    "description: Original boss fight code, definitely not finalized\n",
+    "type: hacks\n",
+    "courses: { compsci: {week: 2} }\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
