--- a/_notebooks/2023-10-03-titlescreen.ipynb
+++ b/_notebooks/2023-10-03-titlescreen.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "toc: true\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: Souls Title Screen (original)\n",
+    "description: Original title screen code for souls game\n",
+    "type: hacks\n",
+    "courses: { compsci: {week: 2} }\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -298,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
