--- a/_notebooks/2023-09-06-charactercreation.ipynb
+++ b/_notebooks/2023-09-06-charactercreation.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "toc: true\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: Character Creation\n",
+    "description: Original code for user input and customization of character\n",
+    "type: hacks\n",
+    "courses: { pp: {week: 3} }\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
