--- a/_notebooks/2023-10-03-titlescreen.ipynb
+++ b/_notebooks/2023-10-03-titlescreen.ipynb
@@ -11,7 +11,7 @@
     "title: Souls Title Screen (original)\n",
     "description: Original title screen code for souls game\n",
     "type: hacks\n",
-    "courses: { compsci: {week: 1} }\n",
+    "courses: { pp: {week: 1} }\n",
     "---"
    ]
   },
