--- a/_posts/2023-10-13-turnTest2.md
+++ b/_posts/2023-10-13-turnTest2.md
@@ -3,9 +3,10 @@ comments: true
 layout: posts
 title: Turn Test
 description: Figuring out user actions and how to format them
-courses: { compsci: {week: 3} }
+courses: { pp: {week: 3} }
 type: hacks
 ---
+
 <style>
         #0 {
             display: block;
