--- a/_posts/2023-10-16-PP_Log3.md
+++ b/_posts/2023-10-16-PP_Log3.md
@@ -5,7 +5,7 @@ layout: post
 title: PP Week 3 Log
 description: Work on passion project - Terminal Souls
 type: plans
-courses: { compsci: {week: 3} }
+courses: { pp: {week: 3} }
 ---
 
 ## Code, Code, Code Week 3 (10/16 - 10/20)
