--- a/_posts/2023-10-23-PP_Log4.md
+++ b/_posts/2023-10-23-PP_Log4.md
@@ -5,7 +5,7 @@ layout: post
 title: PP Week 4 Log
 description: Work on passion project - Terminal Souls
 type: plans
-courses: { compsci: {week: 4} }
+courses: { pp: {week: 4} }
 ---
 
 ## Code, Code, Code Week 4 (10/23 - 10/27)
