--- a/_posts/2023-10-30-PP_Log5.md
+++ b/_posts/2023-10-30-PP_Log5.md
@@ -5,7 +5,7 @@ layout: post
 title: PP Week 5 Log
 description: Wrapping up passion project - Terminal Souls
 type: plans
-courses: { compsci: {week: 5} }
+courses: { pp: {week: 5} }
 ---
 
 ## Code, Code, Code Week 4 (10/23 - 10/27)
