--- a/_posts/2023-10-4-souls.md
+++ b/_posts/2023-10-4-souls.md
@@ -3,6 +3,6 @@ comments: true
 layout: souls
 title: Terminal Souls
 description: souls
-courses: { compsci: {week: 5} }
+courses: { pp: {week: 5} }
 type: tangibles
 ---
