--- a/_notebooks/2023-10-02-bossFight.ipynb
+++ b/_notebooks/2023-10-02-bossFight.ipynb
@@ -11,7 +11,7 @@
     "title: Boss Fight (original)\n",
     "description: Original boss fight code, definitely not finalized\n",
     "type: hacks\n",
-    "courses: { compsci: {week: 2} }\n",
+    "courses: { pp: {week: 2} }\n",
     "---"
    ]
   },
