--- a/_notebooks/2023-10-5-ppPlan.ipynb
+++ b/_notebooks/2023-10-5-ppPlan.ipynb
@@ -11,7 +11,7 @@
     "title: Passion Project Plan\n",
     "description: Passion Project\n",
     "type: plans\n",
-    "courses: { compsci: {week: 0} }\n",
+    "courses: { pp: {week: 0} }\n",
     "---"
    ]
   },
