--- a/_posts/2023-10-09-PP_Log2.md
+++ b/_posts/2023-10-09-PP_Log2.md
@@ -5,7 +5,7 @@ layout: post
 title: PP Week 2 Log
 description: Work on passion project - Terminal Souls
 type: plans
-courses: { pp: {week: 2} }
+courses: { compsci: {week: 2} }
 ---
 
 ## Code, Code, Code Week 2 (10/9 - 10/13)
