--- a/_posts/2023-10-13-turnTest2.md
+++ b/_posts/2023-10-13-turnTest2.md
@@ -3,7 +3,7 @@ comments: true
 layout: posts
 title: Turn Test
 description: Figuring out user actions and how to format them
-courses: { pp: {week: 3} }
+courses: { compsci: {week: 3} }
 type: hacks
 ---
 
