--- a/_notebooks/2023-09-06-charactercreation.ipynb
+++ b/_notebooks/2023-09-06-charactercreation.ipynb
@@ -11,7 +11,7 @@
     "title: Character Creation\n",
     "description: Original code for user input and customization of character\n",
     "type: hacks\n",
-    "courses: { pp: {week: 3} }\n",
+    "courses: { compsci: {week: 3} }\n",
     "---"
    ]
   },
