--- a/_posts/2023-10-02-PP_Log1.md
+++ b/_posts/2023-10-02-PP_Log1.md
@@ -5,7 +5,7 @@ layout: hack
 title: PP Week 1 Log
 description: Begin passion project - Terminal Souls
 type: plans
-courses: { pp: {week: 1} }
+courses: { compsci: {week: 1} }
 ---
 
 ## Ideation Week 7 (10/2 - 10/6)
