--- a/_posts/2023-10-09-PP_Log2.md
+++ b/_posts/2023-10-09-PP_Log2.md
@@ -21,3 +21,5 @@ Wednesday:
 Thursday: 
 - In class: not much --> student lessons
 Friday: 
+
+[Backend](https://github.com/dino596/JARMIRAMJI/issues/2)
