--- a/_posts/2023-10-23-PP_Log4.md
+++ b/_posts/2023-10-23-PP_Log4.md
@@ -11,5 +11,6 @@ courses: { compsci: {week: 4} }
 ## Code, Code, Code Week 4 (10/23 - 10/27)
 See github issues for our plans!
 
+[Frontend](https://github.com/M8tth3/ramjiJarmi/issues/4)
 
-[Frontend Plans](https://github.com/M8tth3/ramjiJarmi/issues/4)
+[Backend](https://github.com/dino596/JARMIRAMJI/issues/3)
