boss_fight_comments

--- a/_posts/2023-10-30-PP_Log5.md
+++ b/_posts/2023-10-30-PP_Log5.md
@@ -14,3 +14,4 @@ See github issues for our plans!
 
 [Matthew's Plans](https://github.com/M8tth3/ramjiJarmi/issues/5)
 [Isabelle's Plans](https://github.com/M8tth3/ramjiJarmi/issues/6)
+[Rayane's Plans]()
