--- a/_posts/2023-10-13-turnTest2.md
+++ b/_posts/2023-10-13-turnTest2.md
@@ -1,6 +1,6 @@
 ---
 comments: true
-layout: posts
+layout: post
 title: Turn Test
 description: Figuring out user actions and how to format them
 courses: { compsci: {week: 3} }
